@@ -1,3 +1,7 @@
+2009-08-02  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: In wait_for_event do not wait for full seconds anymore.
+
 2009-07-28  Axel Waggershauser  <awagger@web.de>
 
 	* config.c: Unified names and values of configuration settings.
